--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,4 @@ NODE_ENV = development
 DB_LOCAL_URI = mongodb://127.0.0.1:27017/kcart
 JWT_SECRET = 12356
 JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7
