--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,3 +4,9 @@ DB_LOCAL_URI = mongodb://127.0.0.1:27017/kcart
 JWT_SECRET = 12356
 JWT_EXPIRES_TIME = 7d
 COOKIE_EXPIRES_TIME = 7
+SMTP_HOST = sandbox.smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_USER = c079f3c90a2b67
+SMTP_PASS = 11f3e18430abda
+SMTP_FROM_NAME = kcart
+SMTP_FROM_EMAIL = kcart@gmail.com
